# image-scrust

./: .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4c8klijdxyqjai9ckcpx1040p8li1yjs-source  f6dmfsh2j76z8abs4d49pj5jzjaks4mf-source  nnkmbgmk23xqs4wkh96hw1p1xjmjrjpx-source
src/: error.rs  main.rs  scraper.rs
src/scraper/: cosplay_tele.rs  hot_girl.rs  nude_bird.rs
