[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
derive_builder = "0.20.0"
reqwest = { version = "0.12.3", features = ["blocking", "rustls-tls"] }
select = "0.6.0"
thiserror = "1.0.58"
url = "2.5.0"
urlencoding = "2.1.3"
